Support for Multiple Redis DataType